# RustJourney

./: README.MD
Concurrency/concurrency/src/: main.rs
Concurrency/mutex/src/: main.rs
Day1/: README.MD
Day1/HelloWorld/cargo_helloworld/: Cargo.toml
Day10/Traits/src/: main.rs
Day11/LifeTime/struct_lifetime/: Cargo.toml
Day12/: ReadMe.md
Day12/mini-grep/: output.txt
Day12/mini-grep/src/: lib.rs  main.rs
Day13/closures/src/: main.rs
Day14/custom_iterator/src/: main.rs
Day14/iterators/src/: main.rs
Day16/workspace/add/: Cargo.toml
Day17/dref_trait/: Cargo.toml
Day17/dref_trait/src/: main.rs
Day17/smart_pointer/src/: main.rs
Day18/drop_trait/src/: main.rs
Day19/interior_mutability/src/: main.rs
Day19/refrence_counting/: Cargo.toml
Day19/refrence_counting/src/: main.rs
Day2/guessing_game/: Cargo.toml
Day2/guessing_game/src/: main.rs
Day20/weak_pointer/: Cargo.toml
Day20/weak_pointer/src/: main.rs
Day3/Borrowing/: Cargo.toml
Day3/Borrowing/src/: main.rs
Day3/control_flow/src/: main.rs
Day3/functions/src/: main.rs
Day3/ownership/src/: main.rs
Day3/variables/src/: main.rs
Day4/DangleRefrences/: Cargo.toml
Day4/DangleRefrences/src/: main.rs
Day4/Refrences/: Cargo.toml
Day4/Refrences/src/: main.rs
Day5/Enums/: Cargo.toml
Day5/Enums/src/: main.rs
Day5/Method_Syntax/: Cargo.toml
Day8/ErrorHandling/: Cargo.toml  newFile.txt
async_await/: Cargo.toml
async_await/src/: main.rs
macro_topic/: Cargo.toml
macro_topic/src/: main.rs
serde_examples/: Cargo.toml
serde_examples/src/: main.rs
(+17 files in other folders)
